--- a/evaluation.tex
+++ b/evaluation.tex
@@ -10,7 +10,7 @@ Afterwards, in the main part of the section, we detail the simulation results an
 
 \subsection{Simulation Framework and Parameters}
 Our simulation framework relies on OSSim \cite{nguyen2013ossim}. 
-OSSim is a packet level simulator for DONet \cite{zhang2005coolstreaming}, a pull-based online video streaming overlay, which we use in our case studies.
+OSSim is a packet level simulator for DONet \cite{zhang2005coolstreaming}, a pull-based online streaming overlay.
 All our overlays use the network topology generator GT-ITM \cite{GT} with 1000 peers connected to 400 edge router. Furthermore, our simulation time is 500s and the presented results are averages over 10 runs. 
 
 We differentiate between malicious and benign peers when considering their online times. 
@@ -38,29 +38,27 @@ det. allowed $\minDR$ & 10 & list size $LS$ & $\{8,10\}$\\\hline
 \end{table}
 \vspace{-2.5mm}
 \subsection{Metrics}
-We rely upon four metrics to characterize the streaming performance.
-
-\subsubsection*{Satisfaction $\sat$} The satisfaction or satisfaction is the fraction of chunks peers receive in time, averaged over all peers. 
+The following metrics characterize the performance.
+\subsubsection*{Satisfaction $\sat$} The satisfaction is the fraction of chunks peers receive in time, averaged over all peers. 
 \subsubsection*{Avg. Loss $lo$} The average loss indicates the fraction of chunks that peers do not receive or not receive in time. 
 \subsubsection*{Detection Overhead $DO$} The detection overhead describes the communication overhead created by the detection mechanism. More formally, it is the ratio of messages exchanged during due to the detection mechanism and all signaling messages in the system.
 \subsubsection*{Benign Ratio per Neighbor List $BRNL$} The benign ratio per neighbor list measures the fraction of benign peers in the source's neighbor list.
 
 \subsection{Case 1: \drop Severity}
 
-In this case study, we evaluate the impact of \drop on two different network scenarios:  (1) DONet, and (2) DONet+SWAP \cite{nguyen2016swap}. We consider SWAP to check  how regular replacement of headnodes affects the attack. 
+In this case study, we evaluate the impact of \drop on two different network scenarios:  (1) DONet, and (2) DONet+SWAP \cite{nguyen2016swap}. We consider SWAP to check how regular replacement of headnodes affects the attack. 
 We use the same total number of peers but vary the size of the neighbor list.
 As malicious peers aim to occupy the closest peers to the source, the remaining size of the overlay is not a factor on the impact of the \drop attack.
 
 Given the source's neighbor list size $LS=10$, we choose the following combinations for the attackers budget $(eta x, MN)$: $(10,0), (5,15), (7,70), (8,24)$.
 Here, $MN=70$ denotes that 7 malicious peers are connected to each of the 10 headnodes.
-We start with analyzing the attack's impact on DONet and then we evaluate the resilience of the SWAP mechanism to the attack.
+We start with analyzing the attack's impact on DONet and then we evaluate the resilience of SWAP to the attack.
 
 Figure~\ref{subfig:avg-loss-donet} displays the average chunk loss ratio.
 Unsurprisingly, the average loss is 100\% when $\eta x= LS =10$, which means that the source's $LS$ is utterly saturated with malicious headnodes, i.e., no chunks are transmitted to the rest of the overlay.
-Accordingly, the average peer satisfaction is always 0\%. 
+Thus,, the average peer satisfaction is always 0\%. 
 
-If $\eta x < 10$, the average loss initially reaches up to ~82\% for $(\eta x, MN)=(7, 70)$. 
-For $$(\eta x, MN)=(5, 15)$$ the loss ratio is ~54\% and ~73\%, and for $(\eta x, MN)=(8, 24)$, as shown in Figure~\ref{subfig:avg-loss-donet}.
+If $\eta x < 10$, the average loss initially reaches up to ~82\% for $(\eta x, MN)=(7, 70)$, for $(\eta x, MN)=(5, 15)$, the loss ratio is ~54\% and ~73\% for $(\eta x, MN)=(8, 24)$, as shown in Figure~\ref{subfig:avg-loss-donet}.
 If $\eta x$ or $MN$ increases, benign peers experience severe service degradation for a longer time period. 
 Benign peers close to the source are overloaded with requests that they cannot respond to, leading to a high ratio of missed chunks. 
 Nevertheless, the loss ratio decreases once a fraction of benign (headnodes and non-headnodes) peers are able to serve the rest of the overlay.
@@ -74,7 +72,7 @@ Consequentially, malicious peers abuse the mechanism via nominating other malici
 Moreover, malicious peers connected to benign headnodes are eventually nominated to the source and thus can occupy the source's neighbor list $LS$. 
 
 As shown in Figure~\ref{subfig:avg-loss-donet}, comparing the same values at $(\eta x, MN)=(5, 15)$ for both DONet and SWAP show that the impact of the attack is more significant if SWAP is active.
-Before the source's $LS$ is saturated with malicious peers at $t=80s$, the average loss is in fact decreasing, However, as soon as malicious peers control the neighbor list, the average chunk loss increases up to ~97\%. 
+Before the source's $LS$ is saturated with malicious peers at $t=80s$, the average loss is in fact decreasing, However, as soon as malicious peers control the neighbor list, the average loss increases up to ~97\%. 
 For the same reason, the satisfaction level of benign peers eventually decreases to ~6\%, which highlights the unsuitability of SWAP against our proposed attack.
 
 \begin{figure}[t!]
@@ -110,9 +108,9 @@ Even if the source is initially only connected to malicious headnodes, i.e., $\e
 
 Figure~\ref{subfig:det-sat} illustrates the average restored peer satisfaction level due to the detection mechanism.
 For the various attack placement strategies, the average satisfaction level increases up to ~95-100\%, even for $\eta x=10$.
-As the detection mechanism starts at $t=250s$, the mechanism's impact on the peers satisfaction level $\sat$ can be noticed in a short time period.
+As the detection mechanism starts at $t=250s$, the mechanism's impact on the peers' satisfaction level $\sat$ can be noticed in a short time period.
 The reason is that the number of initial detection requests sent to the source results in replacing a high fraction of the source's headnodes and quickly increases the satisfaction levels. 
-Moreover, malicious peers are unable to misuse the detection mechanism, as indicated by the absence of degradation in  satisfaction levels. 
+Moreover, malicious peers are unable to misuse the mechanism, as indicated by the absence of degradation in satisfaction levels. 
 
 Figure~\ref{subfig:overhead} depicts the average detection overhead induced by our mechanism. 
 As notice, the maximum overhead due to the detection mechanism is ~8\% for the different attack scenarios.
