--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,11 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{proposition}[theorem]{Preposition}
-\usepackage[caption=false,font=footnotesize]{subfig}
+
+% \usepackage[caption=false,font=footnotesize]{subfig}
+\usepackage{subcaption}
+\setlength{\intextsep}{.1\intextsep}
+
 \usepackage{url}
 % \usepackage{hyperref}
 \hyphenation{op-tical net-works semi-conduc-tor}
