--- a/ref.bib
+++ b/ref.bib
@@ -45,11 +45,11 @@ author={{D. Li. et al.}},
 booktitle={{IEEE Trans. Multimedia}}, 
 title={{Defending Against Buffer Map Cheating in DONet-Like P2P Streaming}}, 
 year={{2009}}, 
-volume={11}, 
+
 pages={535--542}
 }
 @inproceedings{pollution1, 
-author={{I. Gkortsilas and K. Deltouzos}}, 
+author={{Gkortsilas. I. et. al}}, 
 booktitle={{Proc. EuCNC}}, 
 title={{Detecting and Isolating Pollution Attacks in Peer-to-peer VoD Systems}}, 
 year={2016}, 
@@ -57,7 +57,7 @@ pages={340--344}
 }
 @article{pollution2,
   title={{A Trust-based Pollution Attack Prevention Scheme in Peer-to-peer Streaming Networks}},
-  author={{Kang, X. and Wu, Y.}},
+  author={{Kang, X. et al.}},
   journal={{Computer Networks}},
   volume={72},
   pages={62--73},
@@ -94,7 +94,7 @@ pages={340--344}
 }
 @article{zhang2014modeling,
   title={{Modeling and Performance Analysis of Pull-based Live Streaming Schemes in Peer-to-Peer Network}},
-  author={{Zhang, Jianwei and Xing, Wei and Wang, Yongchao and Lu, Dongming}},
+  author={{Zhang, J. et al.}},
   journal={{Computer Communications}},
   volume={40},
   pages={{22--32}},
@@ -102,8 +102,8 @@ pages={340--344}
 }
 @article{sasi2014survey,
   title={{A Survey on Peer to Peer Video Streaming Systems}},
-  author={{Sasi, Lekshmy A and Madhavu, Minu Lalitha}},
-  journal={{IJRECE}},
+  author={{Sasi, L. et al.}},
+  journal={{Proc. IJRECE}},
   volume={3},
   year={2014}
 }
