--- a/detection.tex
+++ b/detection.tex
@@ -62,7 +62,7 @@ The node $b$ bases its decision on whether to initiate a request or forward a co
  \centering
  \includegraphics[width=5.5cm,height=5cm]{./Figures/detection.pdf}
  
-  \caption{Detection process for \drop. $S$ represents the source peer.}
+  \caption{Detection process for \drop. $S$ denotes the source.}
   \vspace{-4.5mm}
 \label{detection-blocks} 
 \end{figure}
@@ -77,12 +77,17 @@ The satisfaction of a peer is defined as the fraction of missed chunks, i.e., th
 % \mn[Stef]{how many chunks does the peer consider for that; all during the whole download, only the last $s$ seconds?}
 In a nutshell, $b$ starts a detection request if its satisfaction is below a satisfaction threshold $\satThres$.
 However, to limit the ability of malicious peers to incorrectly accuse benign peers and increase the load through false detection requests, the concrete conditions that result in a detection request from $b$ are: 
+
+% \begin{itemize}[noitemsep,wide=0pt, leftmargin=\dimexpr\labelwidth + 2\labelsep\relax]
+
 \begin{enumerate}
+% \begin{compactenum}
  \item $b$'s current satisfaction level $\sat_b$ is less than the predefined threshold, i.e., $\sat_b < \satThres$.
  \item The number of drop detection requests sent by $b$ in the time interval $t_{det}$ is $< \kappa$. 
 %   \mn[Stef]{unclear: is it 'only $\kappa$ requests in last $t_{det}$ timeunits' or 'we divide the time into epochs of length $t_{det}$ and you can only send $\kappa$ per epoch'?}
 %   \mn[Hatem]{It is the second one (for every $t_{det}$, only $\kappa$ requests are allowed by peer), I fixed that in the text, please double check.}
  \item $b$ has not initiated or replied to any other \drop detection request that the source has not decided on yet.
+% \end{compactenum}
 \end{enumerate}
 % Hatem: trim
 % The latter condition guarantees that peers cannot trigger or participate in multiple detection requests in parallel.
@@ -158,16 +163,17 @@ Finally, when $b$ receives the \textit{complaint Reply} from the source, $b$
 Similarly, $b$ forwards the complaint to the other participants, who in turn execute steps 1 and 2.
 
 \subsection{General Notes}
-The detection mechanism does not aim at expelling peers from the system.
-The reason for the lack of harshness of the penalty associated with a detection lies in the potentially high false positive rate for headnodes exhibiting a low performance. 
-These might be accidentally declared to be malicious peers due to not forwarding chunks sufficiently fast. 
-While removing such peers as headnodes is likely to benefit the system, it is not in our interest to ban them from the system. 
+The detection mechanism does not aim at expelling peers from the system as removing peers as headnodes is highly likely to effectively benefit the system.
 Indeed, the only peers that get blacklisted are those who violate the detection mechanism constraints, i.e., participating in more than a single request at a time or initiating more than $\kappa$.
+The reason for the lack of harshness of the penalty associated with a detection lies in the potentially high false positive rate for headnodes exhibiting a low performance. 
+% These might be accidentally declared to be malicious peers due to not forwarding chunks sufficiently fast. 
+% While removing such peers as headnodes is likely to benefit the system, it is not in our interest to ban them from the system. 
+In general, the main target of the detection mechanism is to enhance the peers satisfaction level while keeping peer replacements and signaling overhead low.
 % \mn[Stef]{Where does it talk about that? who does it when?}
 
-In general, the main target of the detection mechanism is to enhance the peers satisfaction level while keeping peer replacements and  
-signaling overhead low. In Section \ref{sec:eval}, we evaluate these three aspects from various scenarios. 
-Furthermore, we design our protocol such that offers little opportunity for misuse, as we show in the next section. 
+
+% In Section \ref{sec:eval}, we evaluate these three aspects from various scenarios. 
+% Furthermore, we design our protocol such that offers little opportunity for misuse, as we show in the next section. 
 
 
 
