--- a/evaluation.tex
+++ b/evaluation.tex
@@ -4,11 +4,10 @@
 The goal of this section is to address two research questions: 
 First, we quantify the severity of \drop. 
 Second, we evaluate the proposed detection mechanism's performance in terms of effectiveness and overhead. 
+We start by describing the simulation model and set-up before detailing the simulation results and their interpretation for both research questions.
 
-We start by describing simulation model and set-up. 
-Afterwards, in the main part of the section, we detail the simulation results and their interpretation for both research questions.
 
-\subsection{Simulation Framework and Parameters}
+\subsection{Simulation Framework, Parameters and Metrics}
 Our simulation framework relies on OSSim \cite{nguyen2013ossim}. 
 OSSim is a packet level simulator for DONet \cite{zhang2005coolstreaming}, a pull-based online streaming overlay.
 All our overlays use the network topology generator GT-ITM \cite{GT} with 1000 peers connected to 400 edge router. Furthermore, our simulation time is 500s and the presented results are averages over 10 runs. 
@@ -16,28 +15,29 @@ All our overlays use the network topology generator GT-ITM \cite{GT} with 1000 p
 We differentiate between malicious and benign peers when considering their online times. 
 We assume that malicious peers join the overlay early and do not leave before the video dissemination ends in order to maximize their impact. 
 In contrast,  benign peers joining is based on Pareto distribution, while their leaving times is estimated using Lognormal distributions, as motivated by real-world measurements \cite{distribution}.
-Benign peers can rejoin the overlay in a uniform distribution around 10s.
-Table \ref{tab:parameters} gives an overview of our parameters. 
+Benign peers can rejoin the overlay in a uniform distribution around 10s. For both case studies, the streaming rate is $400kbps$, the chunk size $=2500B$ and the buffer size $=30s$.
 
-\begin{table}[ht]
-\center
-\caption{Acronyms}
-\begin{tabular}{|c|c||c|c|}
-\hline
 
-\bf{Var.} & \bf{Desc.}  & \bf{Var.} & \bf{Desc.} \\\hline\hline
+% 
+% \begin{table}[ht]
+% \center
+% \caption{Acronyms}
+% \begin{tabular}{|c|c||c|c|}
+% \hline
+% 
+% \bf{Var.} & \bf{Desc.}  & \bf{Var.} & \bf{Desc.} \\\hline\hline
+% 
+% mal. headnodes $\eta x$ & $\{5,8,10\}$ & chunk size & 2500B \\\hline
+% sat. threshold $\satThres$ & $\{0.5,0.7,0.95\}$ & $\treply$ & 10s\\\hline
+% mal. neighbors $MN$  & $\{0,15,24,70,100\}$ & stream Rate & 400kbps\\\hline
+% min. responses $\minP$ &  $\{3,4\}$ & buffer size & 30s  \\\hline
+% det. allowed $\minDR$ & 10 & list size $LS$ & $\{8,10\}$\\\hline
+%   
+% \end{tabular}
+% \label{tab:parameters}
+% \end{table}
+% \vspace{-2.5mm}
 
-mal. headnodes $\eta x$ & $\{5,8,10\}$ & chunk size & 2500B \\\hline
-sat. threshold $\satThres$ & $\{0.5,0.7,0.95\}$ & $\treply$ & 10s\\\hline
-mal. neighbors $MN$  & $\{0,15,24,70,100\}$ & stream Rate & 400kbps\\\hline
-min. responses $\minP$ &  $\{3,4\}$ & buffer size & 30s  \\\hline
-det. allowed $\minDR$ & 10 & list size $LS$ & $\{8,10\}$\\\hline
-  
-\end{tabular}
-\label{tab:parameters}
-\end{table}
-\vspace{-2.5mm}
-\subsection{Metrics}
 The following metrics characterize the performance.
 \subsubsection*{Satisfaction $\sat$} The satisfaction is the fraction of chunks peers receive in time, averaged over all peers. 
 \subsubsection*{Avg. Loss $lo$} The average loss indicates the fraction of chunks that peers do not receive or not receive in time. 
@@ -61,7 +61,7 @@ Thus,, the average peer satisfaction is always 0\%.
 If $\eta x < 10$, the average loss initially reaches up to ~82\% for $(\eta x, MN)=(7, 70)$, for $(\eta x, MN)=(5, 15)$, the loss ratio is ~54\% and ~73\% for $(\eta x, MN)=(8, 24)$, as shown in Figure~\ref{subfig:avg-loss-donet}.
 If $\eta x$ or $MN$ increases, benign peers experience severe service degradation for a longer time period. 
 Benign peers close to the source are overloaded with requests that they cannot respond to, leading to a high ratio of missed chunks. 
-Nevertheless, the loss ratio decreases once a fraction of benign (headnodes and non-headnodes) peers are able to serve the rest of the overlay.
+Nevertheless, the loss ratio decreases once a fraction of benign peers are able to serve the rest of the overlay.
 
 Figure~\ref{subfig:satisfaction-donet} presents the average peer satisfaction level $\sat$.
 As a consequence of experiencing high chunk loss rate, higher values of $\eta x, MN$ result in lower peer satisfaction over time, where benign peers at $(\eta x, MN)=(5, 15)$ restore their satisfaction level at ~340s, which is earlier than at $(\eta x, MN)=(7, 70)$ and $(\eta x, MN)=(8, 24)$.
@@ -75,19 +75,41 @@ As shown in Figure~\ref{subfig:avg-loss-donet}, comparing the same values at $(\
 Before the source's $LS$ is saturated with malicious peers at $t=80s$, the average loss is in fact decreasing, However, as soon as malicious peers control the neighbor list, the average loss increases up to ~97\%. 
 For the same reason, the satisfaction level of benign peers eventually decreases to ~6\%, which highlights the unsuitability of SWAP against our proposed attack.
 
-\begin{figure}[t!]
-\centering
-
-  \mbox{\subfloat[Avg. loss]{\label{subfig:avg-loss-donet}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/avg-loss-donet.eps}}}
-   \vspace{-1.5mm}
-  \mbox{\subfloat[Avg. peer satisfaction]{\label{subfig:satisfaction-donet}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/satisfaction-donet.eps}}}
-%   \mbox{\subfloat[Avg. loss]{\label{subfig:avg-loss-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/avg-loss-donet.eps}} \subfloat[Avg. peer satisfaction]{\label{subfig:satisfaction-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/satisfaction-donet.eps}}} 
-
-  \caption{Attack's impact on DONet}
-  \vspace{-3.5mm}
+\begin{figure}[tb]
+%   \setlength{\belowcaptionskip}{-10pt}
+  \centering
+  \begin{subfigure}[c]{0.95\columnwidth}
+    \centering
+    \includegraphics[width=8.4cm,height=3.5cm]{./Figures/avg-loss-donet.eps}
+    \caption{Average loss}%
+    \label{subfig:avg-loss-donet}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.95\columnwidth}
+    \centering
+    \includegraphics[width=8.4cm,height=3.5cm]{./Figures/satisfaction-donet.eps}
+    \caption{Average peer satisfaction}%
+    \label{subfig:satisfaction-donet}
+  \end{subfigure}
+  \caption{Attack's impact on DONet}%
   \label{fig:attack-results}
-  \end{figure}
+  \vspace{-4mm}
+\end{figure}
 
+% 
+% 
+% \begin{figure}[t!]
+% \centering
+% 
+%   \mbox{\subfloat[Avg. loss]{\label{subfig:avg-loss-donet}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/avg-loss-donet.eps}}}
+% %    \vspace{-3mm}
+%   \mbox{\subfloat[Avg. peer satisfaction]{\label{subfig:satisfaction-donet}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/satisfaction-donet.eps}}}
+% %   \mbox{\subfloat[Avg. loss]{\label{subfig:avg-loss-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/avg-loss-donet.eps}} \subfloat[Avg. peer satisfaction]{\label{subfig:satisfaction-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/satisfaction-donet.eps}}} 
+% 
+%   \caption{}
+%   \vspace{-3.5mm}
+%   \label{fig:attack-results}
+%   \end{figure}
+% 
 
 \subsection{Case 2: Detection Mechanism Performance}
 
@@ -123,22 +145,48 @@ In fact, varying $\minP$ between 3, 4 and 5 has little impact on the detection p
 To that end, through the results, we highlight that the detection mechanism is indeed effective against \drop attacks, even if the attacker possesses high malicious budget as headnodes.
 Moreover, we show that malicious peers are incapable of abusing the detection mechanism and place themselves as headnodes. Finally, the detection mechanism induces a very small overhead on the overlay.
 
-
-\begin{figure}[t!]
-\centering
-
-  \mbox{\subfloat[Avg. BRNL]{\label{subfig:BRNL}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/det-BRNL1.eps}}}
-\vspace{-1.5mm}    
-  \mbox{\subfloat[Avg. peer satisfaction]{\label{subfig:det-sat}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/det-sat.eps}}}
-  \vspace{-1.5mm}   
-   \mbox{\subfloat[Detection overhead]{\label{subfig:overhead}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/overhead.eps}}}
-%   \vspace{-1.5mm}   
-%   \mbox{\subfloat[Avg. loss]{\label{subfig:avg-loss-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/avg-loss-donet.eps}} \subfloat[Avg. peer satisfaction]{\label{subfig:satisfaction-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/satisfaction-donet.eps}}} 
-
-  \caption{Detection mechanism performance}
-  \vspace{-3.5mm}   
+\begin{figure}[tb]
+%   \setlength{\belowcaptionskip}{-10pt}
+  \centering
+  \begin{subfigure}[c]{0.95\columnwidth}
+    \centering
+    \includegraphics[width=8.4cm,height=3.5cm]{./Figures/det-BRNL1.eps}
+    \caption{Average BRNL}%
+    \label{subfig:BRNL}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.95\columnwidth}
+    \centering
+    \includegraphics[width=8.4cm,height=3.5cm]{./Figures/det-sat.eps}
+    \caption{Avg. peer satisfaction}%
+    \label{subfig:det-sat}
+  \end{subfigure}
+  \begin{subfigure}[c]{0.95\columnwidth}
+    \centering
+    \includegraphics[width=8.4cm,height=3.5cm]{./Figures/overhead.eps}
+    \caption{Detection overhead}%
+    \label{subfig:overhead}
+  \end{subfigure}
+  \caption{Detection mechanism performance}%
   \label{fig:detection-results}
-  \end{figure}
+   \vspace{-4.5mm}
+\end{figure}
+
+
+% \begin{figure}[t!]
+% \centering
+% \vspace{-3.5mm}
+%   \mbox{\subfloat[Avg. BRNL]{\label{subfig:BRNL}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/det-BRNL1.eps}}}
+% \vspace{-3.5mm}
+%   \mbox{\subfloat[Avg. peer satisfaction]{\label{subfig:det-sat}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/det-sat.eps}}}
+% 
+%    \mbox{\subfloat[Detection overhead]{\label{subfig:overhead}\includegraphics[width=8.4cm,height=3.5cm]{./Figures/overhead.eps}}}
+% %   \vspace{-1.5mm}   
+% %   \mbox{\subfloat[Avg. loss]{\label{subfig:avg-loss-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/avg-loss-donet.eps}} \subfloat[Avg. peer satisfaction]{\label{subfig:satisfaction-donet}\includegraphics[width=3.7cm,height=2.5cm]{./Figures/satisfaction-donet.eps}}} 
+% 
+%   \caption{Detection mechanism performance}
+%   \vspace{-3.5mm}   
+%   \label{fig:detection-results}
+%   \end{figure}
 
 
 % \subsubsection{Summary of the results}
